objects/CPOC_Personnel__c.object
<CustomObject>
    <fields>
        <fullName>CPOC_End_Date__c</fullName>
        <description>CPOC end date</description>
        <label>Personnel End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CPOC_Start_Date__c</fullName>
        <description>This field has Personal start date</description>
        <label>Personnel Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Engagements_Events__c</fullName>
        <description>CPOC Lab Request related to this engineer</description>
        <label>Customer Engagements &amp; Events</label>
        <referenceTo>CEE__c</referenceTo>
        <relationshipLabel>CPOC Personnel</relationshipLabel>
        <relationshipName>CPOC_Personnels</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Personnel__c</fullName>
        <description>Engineer available for respective preferred lab</description>
        <label>Personnel</label>
        <referenceTo>Personnel__c</referenceTo>
        <relationshipLabel>CPOC Personnels</relationshipLabel>
        <relationshipName>CPOC_Personnels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>CPOC Personnel</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Personnel Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CPOC Personnels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Visit_End_Date_Greaterthan</fullName>
        <active>false</active>
        <errorConditionFormula>CPOC_End_Date__c &gt; Customer_Engagements_Events__r.CPOC_End_Date__c</errorConditionFormula>
        <errorDisplayField>CPOC_End_Date__c</errorDisplayField>
        <errorMessage>Visit End Date should not be greater than CPOC's End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Visit_End_date_should_be_more</fullName>
        <active>true</active>
        <description>It is used for CPOC</description>
        <errorConditionFormula>CPOC_End_Date__c &lt; CPOC_Start_Date__c</errorConditionFormula>
        <errorDisplayField>CPOC_Start_Date__c</errorDisplayField>
        <errorMessage>CPOC Start date should be less than CPOC End date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Visit_Start_Date_not_lessthan</fullName>
        <active>false</active>
        <errorConditionFormula>CPOC_Start_Date__c &lt; Customer_Engagements_Events__r.CPOC_Start_Date__c</errorConditionFormula>
        <errorDisplayField>CPOC_Start_Date__c</errorDisplayField>
        <errorMessage>Visit Start Date should not be less than CPOC's Start Date</errorMessage>
    </validationRules>
</CustomObject>